// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fullscreen-slider active page loaded 1`] = `
<div
  class="slider fullscreenSlider fullscreen-slider"
>
  <div
    aria-live="assertive"
    class="slider__a11y"
    role="alert"
  />
  <div
    class="slider__items"
  >
    <div
      aria-hidden="false"
      class="slider__item slider__item_active"
    >
      <div
        class="slider__content"
      >
        <lego-components_spin
          progress="true"
          size="l"
          view="default"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="slider__item"
    />
    <div
      aria-hidden="true"
      class="slider__item"
    />
  </div>
  <div
    class="slider__toolbar slider__toolbar_visible"
  >
    <div
      class="pagerWrapper"
    >
      <div
        class="pagerLayout"
      >
        <div
          class="pager_visible"
        >
          <div
            class="pageCounterWrapper"
          >
            <input
              class="input"
              min="1"
              type="number"
              value="1"
            />
            <span
              class="pageCounter"
            >
              1 из 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    autocomplete="off"
    class="Button2 Button2_view_clear Button2_size_xxxl switch-arrow-button switch-arrow-button_right switch-arrow-button_theme_dark"
    type="button"
  >
    <span
      class="ufo-icon icon Button2-Icon"
    >
      <svg
        class="ufo-icon__icon"
        height="48"
        role="none"
        viewBox="0 0 16 16"
        width="48"
      >
        <path
          d="M6.4 12l4-4-4-4-.8.8L8.8 8l-3.2 3.2z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`fullscreen-slider active page loading 1`] = `
<div
  class="slider fullscreenSlider fullscreen-slider"
>
  <div
    aria-live="assertive"
    class="slider__a11y"
    role="alert"
  />
  <div
    class="slider__items"
  >
    <div
      aria-hidden="true"
      class="slider__item"
    />
    <div
      aria-hidden="true"
      class="slider__item"
    />
    <div
      aria-hidden="false"
      class="slider__item slider__item_active"
    >
      <div
        class="slider__content"
      >
        <lego-components_spin
          progress="true"
          size="l"
          view="default"
        />
      </div>
    </div>
  </div>
  <div
    class="slider__toolbar slider__toolbar_visible"
  >
    <div
      class="pagerWrapper"
    >
      <div
        class="pagerLayout"
      >
        <div
          class="pager_visible"
        >
          <div
            class="pageCounterWrapper"
          >
            <input
              class="input"
              min="1"
              type="number"
              value="3"
            />
            <span
              class="pageCounter"
            >
              3 из 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    autocomplete="off"
    class="Button2 Button2_view_clear Button2_size_xxxl switch-arrow-button switch-arrow-button_left switch-arrow-button_theme_dark"
    type="button"
  >
    <span
      class="ufo-icon icon Button2-Icon"
    >
      <svg
        class="ufo-icon__icon"
        height="48"
        role="none"
        viewBox="0 0 16 16"
        width="48"
      >
        <path
          d="M9.6 4l-4 4 4 4 .8-.8L7.2 8l3.2-3.2z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;
